--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,15 @@
 {
-	"domain": "obico_connect",
-	"name": "Obico Connect",
-	"version": "1.0",
-	"documentation": "https://github.com/theminor/obico-connect",
-	"requirements": [
-	  "requests",
-	  "backoff",
-	  "aiohttp"
-	],
-	"dependencies": [],
-	"codeowners": ["@theminor"],
-	"config_flow": true
-  }
+    "domain": "obico_connect",
+    "name": "Obico Connect",
+    "version": "1.0",
+    "documentation": "https://github.com/theminor/obico-connect",
+    "requirements": [
+      "requests",
+      "backoff",
+      "aiohttp",
+      "pymongo"
+    ],
+    "dependencies": [],
+    "codeowners": ["@theminor"],
+    "config_flow": true
+}
